# sendme

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  sendme.py  tsconfig.json  vite.config.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: app.ts  layout.html  main.ts  style.css  types.ts
frontend/src/api/: client.ts  exception.ts  files.api.ts  index.ts
frontend/src/components/: breadcrumb.ts  error.ts  file-manager.ts  file-row.ts  fileList.ts  uploadModal.ts
frontend/src/composables/: use-files.ts  use-progress.ts
frontend/src/services/: useAuth.ts  useNotify.ts  useProgress.ts
frontend/src/ui/: createFileRow.ts  handleTableClick.ts  renderers.ts  setup-listeners.ts
frontend/src/utils/: dom.util.ts  format.util.ts  formatter.ts  get-icons.ts  icon.util.ts  time-ago.ts
sendme-api-collection/: bruno.json  files.bru  get.bru  post.bru
sendme-api-collection/environments/: lokal.bru
src/: app.js  app.ts  main.js  main.ts  style.css  types.ts
src/components/: breadcrumb.js  fileList.js  fileList.ts  uploadModal.js
src/sendme/: __init__.py  __main__.py  app.py  config.py  dist  domain.py  main.py  router.py  service.py  utils.py
src/services/: api.js  api.ts
src/utils/: ui.js  ui.ts
tests/: test_routes.py
