[project]
name = "sendme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "moehakram", email = "moeh.akram@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "qrcode>=8.2",
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
sendme = "sendme.app:main"
