[project]
name = "sendme"
version = "v3.0.0"
description = "Web file explorer to quickly share & manage files on your local network."
readme = "README.md"
authors = [
    { name = "moehakram", email = "moeh.akram@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.125.0",
    "qrcode>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sendme"]

[project.scripts]
sendme = "sendme.main:cli"
